# python-backend-course

./: .pre-commit-config.yaml  README.md  database.db  pyproject.toml
.github/workflows/: test.yml
git-hooks/: commit-msg  install-hooks.sh  pre-receive
task-1/: README.md  calculations.py  main.py  math_api.py  test.py
task_1/: calculations.py  main.py  math_api.py  run_uvicorn.sh  utils.py  validation.py
task_2/: README.md  docker-compose.yml  metrics_report.json  run_load_test.sh
task_2/locust/: locustfile.py
task_2/metrics_collector/: metrics_colleсtor.py
task_2/prometheus/: prometheus.yml
task_2/promtail/: promtail-config.yml
task_2/rest_example/: Dockerfile  database.db  errors.py  main.py  pyproject.toml
task_2/rest_example/db/: crud.py  db_engine.py  utils.py
task_2/rest_example/models/: cart.py  chat.py  item.py
task_2/rest_example/routers/: cart.py  chat.py  client.py  item.py
task_2/tempo/: tempo.yaml
task_4/demo_service/api/: contracts.py  main.py  users.py  utils.py
tests/: conftest.py  pytest.ini  test_homework_1.py  test_homework_2.py  test_homework_4.py
