[tool.poetry]
name = "python-backend-course"
version = "0.1.0"
description = ""
authors = ["Dmitry <erofeevdma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
pytest = "^8.3.3"
async-asgi-testclient = "^1.4.11"
faker = "^30.3.0"
fastapi = "^0.115.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
prometheus-fastapi-instrumentator = "^7.0.0"
aiosqlite = "^0.20.0"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
pre-commit = "^4.0.1"
websockets = "^13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
